@@ -65,6 +65,8 @@ void           empathy_tp_chat_send             (EmpathyTpChat             *chat
 void           empathy_tp_chat_set_state        (EmpathyTpChat             *chat,
 						 TelepathyChannelChatState  state);
 const gchar *  empathy_tp_chat_get_id           (EmpathyTpChat             *chat);
+gchar *        empathy_tp_chat_build_id         (McAccount                 *account,
+						 TpChan                    *tp_chan);
 
 G_END_DECLS
 
